--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
             android:name=".ProductListActivity"
             android:label="@string/title_activity_product_list"
             android:theme="@style/AppTheme" />
-        <activity android:name=".ProductDetailsActivity"></activity>
+        <activity android:name=".ProductDetailsActivity" />
+        <activity android:name=".CartActivity"></activity>
     </application>
 
 </manifest>
